# ember

./: .gitignore  README.md
background/: autograd.ipynb
background/diff/: e1.py  e2.py  e3.ipynb
hardware/CAD/pcb/dependencies/: 2x4 Male Pin Header Angle.STEP
hardware/pcb/: .kicad_sch
hardware/pcb/flight_computer/: barometer.kicad_sch  flight_computer.kicad_dru  flight_computer.kicad_pcb  flight_computer.kicad_prl  flight_computer.kicad_pro  flight_computer.kicad_sch  fp-lib-table  imu.kicad_sch  leds.kicad_sch  mcu.kicad_sch  power.kicad_sch  pyro.kicad_sch  reverse_polarity.kicad_sch  sensors.kicad_sch  sensors.recovered.2026-06-02_214413.kicad_sch  servo.kicad_sch  sym-lib-table  telemetry.kicad_sch
hardware/pcb/flight_computer/exports/: bom.csv
hardware/pcb/flight_computer/exports/fab/: flight_computer-B_Cu.gbr  (+13 more)
simulation/: CLAUDE.md  README.md  pyproject.toml
simulation/configs/vehicles/: atlas.yaml
simulation/src/policy/: base_policy.py  pid.py
simulation/src/runners/: history.py  simulation_runner.py  test_runner.py
simulation/src/utils/: math.py
simulation/src/vehicle/: apex_v1.py  atlas_v1.py  base_vehicle.py  config.py  integrators.py  mass_properties.py  rigid_body.py  state.py
simulation/src/vehicle/components/: aero.py  base_component.py  cartesian_gimbal.py  motor.py
simulation/tests/: conftest.py
simulation/tests/runners/: test_history.py  test_simulation.py
simulation/tests/utils/: test_math.py
simulation/tests/vehicle/: integrators.py  test_atlas.py  test_integrators.py  test_motor.py  test_rigid_body.py  test_state.py
(+25 files in other folders)
