[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ember-rocket"
version = "0.1.0"
description = "Differentiable simulator for thrust-vectored model rockets"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/vehicle", "src/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
